--- a/setup/manifests/base/ingress/kustomization.yaml
+++ b/setup/manifests/base/ingress/kustomization.yaml
@@ -12,13 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 namespace: istio-system
 
 resources:
-  - generated/managedcertificates.yaml
   - default-gateway.yaml
-  - backendconfig.yaml
-  - iap-ingress.yaml
-
-patchesStrategicMerge:
-  - generated/patch-ingress.yaml
+  - virtualservice.yaml
