--- a/examples/jupyter-notebook/kustomization.yaml
+++ b/examples/jupyter-notebook/kustomization.yaml
@@ -15,6 +15,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: pod-broker-system
+
 generatorOptions:
   # Generate stable ConfigMap names for compatability with the BrokerAppConfig configMapRef.
   disableNameSuffixHash: true
