--- a/setup/manifests/base/pod-broker/0-broker-statefulset.yaml
+++ b/setup/manifests/base/pod-broker/0-broker-statefulset.yaml
@@ -76,7 +76,7 @@ metadata:
   labels:
     app: pod-broker
 ---
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: pod-broker
@@ -85,17 +85,17 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: pod-broker
-    namespace: default
+    namespace: pod-broker-system
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: pod-broker
   apiGroup: rbac.authorization.k8s.io
 ---
-kind: Role
+kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: pod-broker
-  namespace: default
+  namespace: pod-broker-system
   labels:
     app: pod-broker
 rules:
@@ -104,6 +104,9 @@ rules:
     verbs: ["*"]
   - apiGroups: ["apps"]
     resources: ["statefulsets"]
+    verbs: ["*"]
+  - apiGroups: ["networking.k8s.io"]
+    resources: ["networkpolicies"]
     verbs: ["*"]
   - apiGroups: ["networking.istio.io"]
     resources: ["gateways", "virtualservices", "serviceentries"]
@@ -188,10 +191,6 @@ spec:
                 name: pod-broker-config
                 optional: false
           env:
-            - name: NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
             - name: COOKIE_SECRET
               valueFrom:
                 secretKeyRef:
