--- a/setup/manifests/base/turn/kustomization.yaml
+++ b/setup/manifests/base/turn/kustomization.yaml
@@ -14,6 +14,11 @@
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+# Shares pod-broker Secret and pod-broker-config ConfigMap from the pod-broker deployment.
+# TODO: separate these out so that the TURN components can be deployed to turn-system namespace
+namespace: pod-broker-system
+
 resources:
   - turn-service.yaml
   - turn-web-virtualservice.yaml
