fix TF backend workspace issue

--- a/setup/manifests/base/pod-broker/0-broker-statefulset.yaml
+++ b/setup/manifests/base/pod-broker/0-broker-statefulset.yaml
@@ -114,6 +114,9 @@ rules:
   - apiGroups: ["gcp.solutions"]
     resources: ["brokerappconfigs", "brokerappuserconfigs"]
     verbs: ["*"]
+  - apiGroups: ["iam.cnrm.cloud.google.com"]
+    resources: ["*"]
+    verbs: ["*"]
 ---
 apiVersion: v1
 kind: Service
