Update disk sizes and machine types to fit under normal quota.
fix jupyter notebook example

update istio operator version and remove unused istio components

fix detection of pending pods in json status response

split out node pool creation into separate step

fix to create_oauth_client.sh script

remove cloud-ep-endpoint module in favor of tf external script

update kubectl to 1.18.1

Add master cloudbuild.yaml to deploy entire stack.

--- a/setup/infra/node-pool-apps/cloudbuild.yaml
+++ b/setup/infra/node-pool-apps/cloudbuild.yaml
@@ -17,6 +17,8 @@ substitutions:
   _ACTION: apply
   _NAME: broker
   _REGION: us-west1
+  _TIER1: "true"
+  _TIER2: "true"
 
 steps:
   ###
@@ -29,5 +31,7 @@ steps:
       - TF_VAR_project_id=${PROJECT_ID}
       - TF_VAR_name=${_NAME}
       - TF_VAR_region=${_REGION}
-      - TERRAFORM_WORKSPACE_NAME=${_REGION}
+      - TF_VAR_tier1_pool_enabled=${_TIER1}
+      - TF_VAR_tier2_pool_enabled=${_TIER2}
+      - TERRAFORM_WORKSPACE_NAME=node-pool-apps-${_REGION}
       - ACTION=${_ACTION}
