--- a/setup/infra/node-pool-gpu/cloudbuild.yaml
+++ b/setup/infra/node-pool-gpu/cloudbuild.yaml
@@ -17,6 +17,8 @@ substitutions:
   _ACTION: apply
   _NAME: broker
   _REGION: us-west1
+  _COS: "true"
+  _UBUNTU: "true"
 
 steps:
   ###
@@ -29,5 +31,7 @@ steps:
       - TF_VAR_project_id=${PROJECT_ID}
       - TF_VAR_name=${_NAME}
       - TF_VAR_region=${_REGION}
-      - TERRAFORM_WORKSPACE_NAME=${_REGION}
+      - TF_VAR_gpu_cos_pool_enabled=${_COS}
+      - TF_VAR_gpu_ubuntu_pool_enabled=${_UBUNTU}
+      - TERRAFORM_WORKSPACE_NAME=node-pool-gpu-${_REGION}
       - ACTION=${_ACTION}
