--- a/setup/manifests/base/pod-broker/namespace.yaml
+++ b/setup/manifests/base/pod-broker/namespace.yaml
@@ -16,3 +16,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: pod-broker-system
+  annotations:
+    cnrm.cloud.google.com/project-id: ${PROJECT_ID}
