--- a/setup/infra/cloudbuild.yaml
+++ b/setup/infra/cloudbuild.yaml
@@ -16,7 +16,9 @@ timeout: 10800s
 substitutions:
   _ACTION: apply
   _NAME: broker
-
+tags:
+  - kube-app-launcher-setup
+  - kube-app-launcher-infra
 steps:
   ###
   # Apply terraform to create base infrastructure
