--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 # Pre-requisites to running with cloud build
-# gcloud services enable compute.googleapis.com container.googleapis.com cloudbuild.googleapis.com cloudresourcemanager.googleapis.com servicemanagement.googleapis.com serviceusage.googleapis.com monitoring.googleapis.com secretmanager.googleapis.com iap.googleapis.com
 # export PROJECT_ID=$(gcloud config get-value core/project 2>/dev/null)
+# gcloud services enable --project $PROJECT_ID compute.googleapis.com container.googleapis.com cloudbuild.googleapis.com cloudresourcemanager.googleapis.com servicemanagement.googleapis.com serviceusage.googleapis.com monitoring.googleapis.com secretmanager.googleapis.com iap.googleapis.com
 # export CLOUDBUILD_SA=$(gcloud projects describe $PROJECT_ID --format='value(projectNumber)')@cloudbuild.gserviceaccount.com
 # gcloud projects add-iam-policy-binding $PROJECT_ID --member serviceAccount:$CLOUDBUILD_SA --role roles/owner
 # gcloud projects add-iam-policy-binding $PROJECT_ID --member serviceAccount:$CLOUDBUILD_SA --role roles/iam.serviceAccountTokenCreator
@@ -23,8 +23,10 @@ timeout: 3600s
 substitutions:
   _ACTION: apply
   _NAME: broker
+  _OAUTH_APP_NAME: App Launcher
   _REGION:
   _USER:
+  _BUILD_IMAGES: "true"
   _ENABLE_COS_GPU: "true"
   _ENABLE_UBUNTU_GPU: "false"
 tags:
@@ -47,9 +49,12 @@ steps:
   - name: "gcr.io/cloud-builders/gcloud"
     id: "build-images"
     dir: "images"
+    entrypoint: bash
     args:
-      - "builds"
-      - "submit"
+      - -c
+      - |
+        [[ "${_BUILD_IMAGES}" == "false" ]] && exit 0
+        exec gcloud builds submit
     waitFor: ["-"]
 
   ###
@@ -61,7 +66,7 @@ steps:
     args:
       - -exc
       - |
-        eval $$(./setup/scripts/create_oauth_client.sh "App Launcher")
+        eval $$(./setup/scripts/create_oauth_client.sh "${_OAUTH_APP_NAME}")
         (gcloud secrets versions access 1 --secret broker-oauth2-client-id) || \
           gcloud secrets create broker-oauth2-client-id \
             --replication-policy=automatic \
