--- a/images/cloudbuild.yaml
+++ b/images/cloudbuild.yaml
@@ -35,8 +35,9 @@ images: [
     # coturn-web
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-coturn-web:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-coturn-web:latest',
-    # image-puller
-    
+    # broker gce proxy
+    'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
+    'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest',
 ]
 
 steps:
@@ -151,3 +152,31 @@ steps:
         ]
   waitFor:
     - coturn-web
+
+###
+# Broker GCE proxy image
+###
+- name: 'gcr.io/cloud-builders/docker'
+  id: gce-proxy-pull
+  entrypoint: 'bash'
+  args: ["-c", "if [[ '${_USE_CACHE}' == 'true' ]]; then (docker pull gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest || exit 0); fi"]
+  waitFor: ["-"]
+- name: 'gcr.io/cloud-builders/docker'
+  id: gce-proxy
+  args: [
+            'build',
+            '-t', 'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
+            '--cache-from', 'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest',
+            'gce-proxy'
+        ]
+  waitFor:
+    - gce-proxy-pull
+- name: 'gcr.io/cloud-builders/docker'
+  id: gce-proxy-tags
+  args: [
+            'tag',
+            'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
+            'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest',
+        ]
+  waitFor:
+    - gce-proxy
