KSA per user namespace, pass OAuth2 Client ID to pod-broker, extract user from cookie then auth header

--- a/setup/manifests/base/pod-broker/0-broker-statefulset.yaml
+++ b/setup/manifests/base/pod-broker/0-broker-statefulset.yaml
@@ -191,6 +191,11 @@ spec:
                 secretKeyRef:
                   name: pod-broker
                   key: COOKIE_SECRET
+            - name: OAUTH_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: oauth-client-id
+                  key: CLIENT_ID
           volumeMounts:
             - name: build
               mountPath: /var/run/build
