convert cpu requests/limits to type string to support types like 500m

--- a/setup/manifests/base/pod-broker/crd.yaml
+++ b/setup/manifests/base/pod-broker/crd.yaml
@@ -184,14 +184,14 @@ spec:
                         type: object
                         properties:
                           cpu:
-                            type: integer
+                            type: string
                           memory:
                             type: string
                       limits:
                         type: object
                         properties:
                           cpu:
-                            type: integer
+                            type: string
                           memory:
                             type: string
 ---
