--- a/setup/manifests/base/pod-broker/crd.yaml
+++ b/setup/manifests/base/pod-broker/crd.yaml
@@ -184,14 +184,20 @@ spec:
                         type: object
                         properties:
                           cpu:
-                            type: string
+                            schema:
+                              oneOf:
+                                - type: string
+                                - type: number
                           memory:
                             type: string
                       limits:
                         type: object
                         properties:
                           cpu:
-                            type: string
+                            schema:
+                              oneOf:
+                                - type: string
+                                - type: number
                           memory:
                             type: string
 ---
