--- a/setup/cloudbuild.yaml
+++ b/setup/cloudbuild.yaml
@@ -46,7 +46,7 @@ steps:
   ###
   # Builds the image used to run the deployment
   ###
-  - name: "gcr.io/kaniko-project/executor:latest"
+  - name: "gcr.io/kaniko-project/executor:v0.19.0"
     id: "build-installer-image"
     args:
       - --destination=gcr.io/${PROJECT_ID}/${_NAME}-installer:latest
