--- a/setup/manifests/base/node/node-init.yaml
+++ b/setup/manifests/base/node/node-init.yaml
@@ -49,6 +49,9 @@ rules:
   - apiGroups: ["gcp.solutions"]
     resources: ["brokerappconfigs", "brokerappuserconfigs"]
     verbs: ["*"]
+  - apiGroups: ["batch"]
+    resources: ["jobs"]
+    verbs: ["*"]
 ---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -108,6 +111,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
           volumeMounts:
             - name: docker
               mountPath: /var/run/docker.sock
