fix daemonset for k8s v1.16

--- a/setup/manifests/base/node/node-init.yaml
+++ b/setup/manifests/base/node/node-init.yaml
@@ -53,7 +53,7 @@ rules:
     resources: ["jobs"]
     verbs: ["*"]
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: pod-broker-node-init
