--- a/setup/manifests/base/pod-broker/crd.yaml
+++ b/setup/manifests/base/pod-broker/crd.yaml
@@ -163,6 +163,10 @@ spec:
                     type: string
                   command:
                     type: string
+            editors:
+              type: array
+              items:
+                type: string
             defaultTier:
               type: string
             nodeTiers:
